[package]
name = "injectsql"
version = "0.6.0"
edition = "2021"
authors = ["João Lucas <joaolucasfp2001@gmail.com>"]
license = "MIT"
description = "Command Line Tools to check for SQL Injection vulnerability."
readme = "README.md"
repository = "https://github.com/heroesofcode/inject-sql"
exclude = [".github/**"]

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.1", features = ["full"] }
scraper = "0.22.0"
regex = "1.11.1"
colored = "3.0.0"
clap = "4.5.31"
ratatui = "0.29.0"
crossterm = "0.28"
hashbrown = "0.15.2"
idna = "1.0.3"