[package]
name = "injectsql"
version = "0.6.0"
edition = "2021"
authors = ["João Lucas <joaolucasfp2001@gmail.com>"]
license = "MIT"
description = "Command Line Tools to check for SQL Injection vulnerability."
readme = "README.md"
repository = "https://github.com/heroesofcode/inject-sql"
exclude = [".github/**"]

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.41.2", features = ["full"] }
scraper = "0.23.1"
regex = "1.11.1"
clap = "4.5.40"
ratatui = "0.29.0"
crossterm = "0.29"