[package]
name = "injectsql"
version = "0.6.0"
edition = "2024"
authors = ["João Lucas <joaolucasfp2001@gmail.com>"]
license = "MIT"
description = "Command Line Tools to check for SQL Injection vulnerability."
readme = "README.md"
repository = "https://github.com/heroesofcode/inject-sql"
exclude = [".github/**"]

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
scraper = "0.24.0"
regex = "1.11.2"
clap = "4.5.47"
ratatui = "0.29.0"
crossterm = "0.29"